{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 850,
  "lineage": "f2ce6faa-b3a7-e29c-4e0c-1092d445a698",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "replica",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/590b6f13-b2ac-4046-b912-57d76de873d7/resourceGroups/Replicas-West-EU/providers/Microsoft.Network/loadBalancers/ReplicaLoadBalancer/frontendIPConfigurations/PublicIPAddress",
                "name": "PublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/590b6f13-b2ac-4046-b912-57d76de873d7/resourceGroups/Replicas-West-EU/providers/Microsoft.Network/publicIPAddresses/PublicIPForLB"
              }
            ],
            "id": "/subscriptions/590b6f13-b2ac-4046-b912-57d76de873d7/resourceGroups/Replicas-West-EU/providers/Microsoft.Network/loadBalancers/ReplicaLoadBalancer",
            "location": "westeurope",
            "name": "ReplicaLoadBalancer",
            "resource_group_name": "Replicas-West-EU",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_public_ip.replica",
            "azurerm_resource_group.replica"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "replica",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/590b6f13-b2ac-4046-b912-57d76de873d7/resourceGroups/Replicas-West-EU/providers/Microsoft.Network/loadBalancers/ReplicaLoadBalancer/backendAddressPools/vms-EU",
            "loadbalancer_id": "/subscriptions/590b6f13-b2ac-4046-b912-57d76de873d7/resourceGroups/Replicas-West-EU/providers/Microsoft.Network/loadBalancers/ReplicaLoadBalancer",
            "name": "vms-EU"
          },
          "dependencies": [
            "azurerm_lb.replica",
            "azurerm_public_ip.replica",
            "azurerm_resource_group.replica"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "replica_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/590b6f13-b2ac-4046-b912-57d76de873d7/resourceGroups/Replicas-West-EU/providers/Microsoft.Network/loadBalancers/ReplicaLoadBalancer/backendAddressPools/vms-EU"
            ],
            "backend_port": 443,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/590b6f13-b2ac-4046-b912-57d76de873d7/resourceGroups/Replicas-West-EU/providers/Microsoft.Network/loadBalancers/ReplicaLoadBalancer/frontendIPConfigurations/PublicIPAddress",
            "frontend_ip_configuration_name": "PublicIPAddress",
            "frontend_port": 443,
            "id": "/subscriptions/590b6f13-b2ac-4046-b912-57d76de873d7/resourceGroups/Replicas-West-EU/providers/Microsoft.Network/loadBalancers/ReplicaLoadBalancer/loadBalancingRules/LBRule-HTTPS",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/590b6f13-b2ac-4046-b912-57d76de873d7/resourceGroups/Replicas-West-EU/providers/Microsoft.Network/loadBalancers/ReplicaLoadBalancer",
            "name": "LBRule-HTTPS",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.replica",
            "azurerm_lb_backend_address_pool.replica",
            "azurerm_public_ip.replica",
            "azurerm_resource_group.replica"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "lb_replica",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/590b6f13-b2ac-4046-b912-57d76de873d7/resourceGroups/Replicas-West-EU/providers/Microsoft.Network/networkSecurityGroups/load-balancer-nsg",
            "location": "westeurope",
            "name": "load-balancer-nsg",
            "resource_group_name": "Replicas-West-EU",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowLoadBalancerHealthProbe",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "AzureLoadBalancer",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-Cloudflare-HTTPS-IPv4",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "103.21.244.0/22",
                  "103.22.200.0/22",
                  "103.31.4.0/22",
                  "104.16.0.0/13",
                  "104.24.0.0/14",
                  "108.162.192.0/18",
                  "131.0.72.0/22",
                  "141.101.64.0/18",
                  "162.158.0.0/15",
                  "172.64.0.0/13",
                  "173.245.48.0/20",
                  "188.114.96.0/20",
                  "190.93.240.0/20",
                  "197.234.240.0/22",
                  "198.41.128.0/17"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-Cloudflare-HTTPS-IPv6",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "2400:cb00::/32",
                  "2405:8100::/32",
                  "2405:b500::/32",
                  "2606:4700::/32",
                  "2803:f800::/32",
                  "2a06:98c0::/29",
                  "2c0f:f248::/32"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "DenyAllInbound",
                "priority": 2000,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.replica"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "replica",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/590b6f13-b2ac-4046-b912-57d76de873d7/resourceGroups/Replicas-West-EU/providers/Microsoft.Network/networkSecurityGroups/replica-nsg",
            "location": "westeurope",
            "name": "replica-nsg",
            "resource_group_name": "Replicas-West-EU",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-Cloudflare-HTTPS-IPv4",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "103.21.244.0/22",
                  "103.22.200.0/22",
                  "103.31.4.0/22",
                  "104.16.0.0/13",
                  "104.24.0.0/14",
                  "108.162.192.0/18",
                  "131.0.72.0/22",
                  "141.101.64.0/18",
                  "162.158.0.0/15",
                  "172.64.0.0/13",
                  "173.245.48.0/20",
                  "188.114.96.0/20",
                  "190.93.240.0/20",
                  "197.234.240.0/22",
                  "198.41.128.0/17"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-Cloudflare-HTTPS-IPv6",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "2400:cb00::/32",
                  "2405:8100::/32",
                  "2405:b500::/32",
                  "2606:4700::/32",
                  "2803:f800::/32",
                  "2a06:98c0::/29",
                  "2c0f:f248::/32"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "DenyAllInbound",
                "priority": 2000,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.replica"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "replica",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/590b6f13-b2ac-4046-b912-57d76de873d7/resourceGroups/Replicas-West-EU/providers/Microsoft.Network/publicIPAddresses/PublicIPForLB",
            "idle_timeout_in_minutes": 4,
            "ip_address": "128.251.152.227",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "PublicIPForLB",
            "resource_group_name": "Replicas-West-EU",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.replica"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "replica",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/590b6f13-b2ac-4046-b912-57d76de873d7/resourceGroups/Replicas-West-EU/providers/Microsoft.Network/virtualNetworks/replica-network/subnets/internal",
            "name": "internal",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Replicas-West-EU",
            "virtual_network_name": "replica-network"
          },
          "dependencies": [
            "azurerm_resource_group.replica",
            "azurerm_virtual_network.replica"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "replica",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/590b6f13-b2ac-4046-b912-57d76de873d7/resourceGroups/Replicas-West-EU/providers/Microsoft.Network/virtualNetworks/replica-network/subnets/internal",
            "network_security_group_id": "/subscriptions/590b6f13-b2ac-4046-b912-57d76de873d7/resourceGroups/Replicas-West-EU/providers/Microsoft.Network/networkSecurityGroups/replica-nsg",
            "subnet_id": "/subscriptions/590b6f13-b2ac-4046-b912-57d76de873d7/resourceGroups/Replicas-West-EU/providers/Microsoft.Network/virtualNetworks/replica-network/subnets/internal"
          },
          "dependencies": [
            "azurerm_network_security_group.replica",
            "azurerm_resource_group.replica",
            "azurerm_subnet.replica",
            "azurerm_virtual_network.replica"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "replica",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "5ae04c6a-82ea-48b8-857f-1bdbdb36b934",
            "id": "/subscriptions/590b6f13-b2ac-4046-b912-57d76de873d7/resourceGroups/Replicas-West-EU/providers/Microsoft.Network/virtualNetworks/replica-network",
            "location": "westeurope",
            "name": "replica-network",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "Replicas-West-EU"
          },
          "dependencies": [
            "azurerm_resource_group.replica"
          ]
        }
      ]
    }
  ]
}